--- a/#source/scss/seller-account.scss
+++ b/#source/scss/seller-account.scss
@@ -3757,6 +3757,46 @@ input:focus+label+.input-infobtn {
     padding-top: 30px;
 }
 
+.inputfield textarea {
+    &::-webkit-scrollbar {
+        width: 6px;
+        border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: rgba(21, 132, 102, 0.2);
+        border-radius: 10px;
+    }
+}
+
+.addbtn {
+    cursor: pointer;
+}
+
+.addqboxes {
+    .col-lg-12 {
+        .inputfield {
+            margin-bottom: 0;
+        }
+    }
+
+    .addqbox {
+        border-bottom: 2px solid #dbdce2;
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+
+        &:last-child {
+            border: none;
+            margin-bottom: 0;
+        }
+    }
+}
+
 @media(max-width: 1399.8px) {
 
     .sellertable {
