--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -799,3 +799,53 @@
         }
     }
 }
+
+
+// strip on top of the site
+.topinfoblock {
+    background: #158466;
+    padding: 15px 0;
+    text-align: center;
+    color: #fff;
+    font-weight: 500;
+    font-size: 14px;
+
+    .container {
+        position: relative;
+    }
+
+    .closetrip {
+        position: absolute;
+        right: 15px;
+        top: 0;
+        width: 25px;
+        height: 25px;
+        padding: 0;
+        border: none;
+        background: transparent;
+
+        img {
+            max-width: 15px;
+        }
+    }
+
+    p {
+        margin: 0;
+
+        img {
+            margin-left: 5px;
+            margin-top: -3px;
+        }
+    }
+}
+
+@media(max-width:575.8px) {
+    .topinfoblock {
+        padding: 25px 0 10px;
+
+        .closetrip {
+            right: 10px;
+            top: -20px;
+        }
+    }
+}
