--- a/#source/scss/admin.scss
+++ b/#source/scss/admin.scss
@@ -4381,3 +4381,318 @@
         width: 400px;
     }
 }
+
+// upd2
+.sellertable .appr-name {
+    width: calc(100% - 905px);
+
+    .title {
+        max-width: 350px;
+    }
+}
+
+.sellertable .appr-date {
+    width: 160px;
+}
+
+.sellertable .appr-vendor {
+    width: 160px;
+}
+
+.sellertable .appr-code {
+    width: 160px;
+}
+
+.sellertable .appr-status {
+    width: 160px;
+}
+
+.sellertable .appr-action {
+    width: 265px;
+
+    .btnswrapper {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+
+        a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            max-width: 120px;
+            flex: 0 0 120px;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 110%;
+            border-radius: 35px;
+            min-height: 40px;
+            transition: 0.3s;
+
+            &.admsellerbtnedit {
+                background: $base-green;
+                color: #fff;
+
+                img {
+                    width: 11px;
+                    margin-right: 5px;
+                }
+
+                &:hover {
+                    box-shadow: 0 4px 10px rgba(21, 132, 102, 0.3);
+                }
+            }
+
+            &.admsellerbtnremove {
+                background: #fff;
+                border: 1px solid #C9273A;
+                color: #C9273A;
+
+                img {
+                    width: 13px;
+                    margin-right: 5px;
+                }
+
+                &:hover {
+                    box-shadow: 0 4px 10px rgba(201, 39, 58, 0.3);
+                }
+            }
+        }
+
+    }
+}
+
+.sellertable.admappr {
+    tbody {
+        .appr-code {
+            font-size: 16px;
+        }
+
+        .appr-status {
+            span {
+                font-size: 13px;
+                padding: 4px 10px 3px;
+                border-radius: 70px;
+                font-weight: 500;
+                color: #3B454C;
+                min-width: 88px;
+                display: inline-block;
+                text-align: center;
+            }
+        }
+    }
+}
+
+.prapprmodal {
+    .roductdetails__infoblock .infoblock__title {
+        color: #21292F;
+    }
+
+    .roductdetails__infoblock p:not(.positionname, .infoblock__title, .subtitle) {
+        font-size: 15px;
+    }
+}
+
+.roductdetails__infoblock.storagecond {
+    .infoblock__title {
+        margin-bottom: 33px;
+    }
+
+    p {
+        margin-bottom: 20px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    .noteinfo {
+        margin-top: 30px;
+        padding: 16px 20px 16px 5px;
+        background: #FAFAFA;
+        border-top: 1px solid #D9DBDF;
+        border-bottom: 1px solid #D9DBDF;
+        font-size: 14px;
+
+        span {
+            font-weight: 500;
+        }
+    }
+}
+
+.rejectinformation {
+    min-height: 60px;
+    font-size: 18px;
+    width: 255px;
+    margin-top: 30px;
+    border-radius: 30px;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #C9273A;
+    border: 1px solid #C9273A;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 140%;
+    transition: 0.3s;
+    margin-left: 12px;
+
+    &:hover {
+        box-shadow: 0 4px 10px rgba(201, 39, 58, 0.3);
+    }
+
+    img {
+        width: 20px;
+        margin-top: -3px;
+        margin-right: 6px;
+    }
+}
+
+@media(max-width:1600.8px) {
+    .sellertable .appr-name {
+        width: calc(100% - 810px);
+    }
+
+    .sellertable .appr-date {
+        width: 130px;
+    }
+
+    .sellertable .appr-vendor {
+        width: 160px;
+    }
+
+    .sellertable .appr-code {
+        width: 127px;
+    }
+
+    .sellertable .appr-status {
+        width: 130px;
+    }
+
+    .sellertable .appr-action {
+        width: 263px;
+    }
+
+}
+
+@media(max-width:1500.8px) {
+
+    .sellertable .appr-name {
+        width: calc(100% - 680px);
+    }
+
+    .sellertable .appr-date {
+        width: 110px;
+    }
+
+    .sellertable .appr-vendor {
+        width: 120px;
+    }
+
+    .sellertable .appr-code {
+        width: 100px;
+    }
+
+    .sellertable .appr-status {
+        width: 110px;
+    }
+
+    .sellertable .appr-action {
+        width: 240px;
+
+        .btnswrapper a {
+            max-width: 110px;
+            flex: 0 0 110px;
+            min-height: 36px;
+        }
+    }
+}
+
+@media(max-width:1199.8px) {
+    .sellertable.admappr table {
+        width: 1100px;
+    }
+}
+
+@media(max-width:991.8px) {
+    .sellertable.admappr table {
+        width: 1000px;
+    }
+}
+
+@media(max-width:767.8px) {
+    .prapprmodal {
+
+        .rejectinformation,
+        .greenbtn.editinformation {
+            font-size: 16px;
+            min-height: 50px;
+            max-width: 200px;
+        }
+    }
+}
+
+@media(max-width:575.8px) {
+    .sellertable.admappr table {
+        width: 940px;
+    }
+
+    .admappr .seller-tableproduct .imgwrap {
+        max-width: 70px;
+        flex: 0 0 70px;
+    }
+
+    .admappr .seller-tableproduct .descrwrap {
+        max-width: calc(100% - 70px);
+        flex: 0 0 calc(100% - 70px);
+    }
+
+    .admappr {
+        .seller-tableproduct .descrwrap .details {
+            margin-top: 10px;
+        }
+    }
+
+    .sellertable.admappr tbody .appr-code {
+        font-size: 14px;
+    }
+
+    .roductdetails__infoblock .infoblock__list li {
+        font-size: 15px;
+    }
+
+    .roductdetails__infoblock .infoblock__list .infoblock__list-price {
+        font-size: 18px;
+    }
+
+    .prapprmodal .rejectinformation {
+        min-height: 46px;
+
+        img {
+            width: 16px;
+            margin-right: 5px;
+        }
+    }
+
+    .prapprmodal .greenbtn.editinformation,
+    .prapprmodal .rejectinformation {
+        width: 150px;
+        margin: 0;
+        font-size: 14px !important;
+    }
+
+    .prapprmodal .btnswrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+}
+
+@media(max-width:360.8px) {
+    .prapprmodal .greenbtn.editinformation,
+    .prapprmodal .rejectinformation {
+        font-size: 13px !important;
+        width: 134px;
+    }
+}
