--- a/#source/scss/product.scss
+++ b/#source/scss/product.scss
@@ -1180,7 +1180,9 @@
     font-size: 16px;
     color: #21292F;
     line-height: 150%;
-    margin-bottom: 30px;
+    margin-top: 15px;
+    border-bottom: 1px solid #D9DBDF;
+    padding-bottom: 15px;
 
     span {
         font-weight: 500;
@@ -1188,8 +1190,7 @@
 }
 
 .sellratbox {
-    padding: 20px 0;
-    border-bottom: 1px solid #D9DBDF;
+    padding: 0 0 20px 0;
 }
 
 .productinfo__alergyfree .categorysect__discounts .discountbox:hover .discountbox__circle {
