--- a/#source/scss/footer.scss
+++ b/#source/scss/footer.scss
@@ -127,7 +127,6 @@ footer.footer {
     }
 }
 
-
 @media(max-width:1550.8px) {
     .footer__list {
         margin-left: 80px;
@@ -213,5 +212,89 @@ footer.footer {
 
     .footer__list .title {
         font-size: 16px;
+    }
+}
+
+
+// subscribe
+.footer__social {
+    display: flex;
+    align-items: center;
+}
+
+.footersubscribe {
+    display: flex;
+    align-items: center;
+    padding-right: 30px;
+
+    button {
+        background: #13B086;
+        border: 1px solid #13B086;
+        color: #fff;
+        transition: 0.3s;
+        height: 36px;
+        font-size: 15px;
+        border-radius: 0 5px 5px 0;
+        width: 100px;
+
+        &:hover {
+            border-color: #fff;
+        }
+    }
+
+    input {
+        height: 36px;
+        border: none;
+        padding-left: 10px;
+        width: 200px;
+        font-size: 15px;
+        border-radius: 5px 0 0 5px;
+    }
+}
+
+@media(max-width:991.8px) {
+    footer.footer .footer__botsect {
+        flex-wrap: wrap;
+    }
+
+    footer.footer .footer__botsect p {
+        order: 2;
+        max-width: 100%;
+        flex: 0 0 100%;
+        text-align: center;
+        margin-top: 30px;
+    }
+
+    .footer__social {
+        order: 1;
+        max-width: 100%;
+        flex: 0 0 100%;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+}
+
+@media(max-width:575.8px) {
+    .footersubscribe {
+        padding-right: 0;
+    }
+
+    .footersubscribe {
+        width: 100%;
+        max-width: 100%;
+        flex: 0 0 100%;
+        margin-bottom: 30px;
+    }
+
+    .footersubscribe button {
+        width: 100%;
+        max-width: 100px;
+        flex: 0 0 100px;
+    }
+
+    .footersubscribe input {
+        width: 100%;
+        max-width: calc(100% - 100px);
+        flex: 0 0 calc(100% - 100px);
     }
 }
