--- a/#source/scss/my-account.scss
+++ b/#source/scss/my-account.scss
@@ -2807,3 +2807,54 @@
     }
 
 }
+
+.myacc-delivered__topinfo {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 3px;
+
+    &>* {
+        margin-right: 30px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+
+    .viewinv {
+        color: #158466;
+        font-weight: 500;
+        line-height: 150%;
+        margin-bottom: 5px;
+        display: inline-block;
+        transition: 0.3s;
+        
+        &:hover {
+            color: #259688;
+        }
+
+        img {
+            vertical-align: middle;
+            margin-top: -3px;
+        }
+    }
+}
+
+.delorderinfo {
+    a {
+        color: #158466;
+        font-size: 14px;
+        font-weight: 500;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+
+@media(max-width:767.8px) {
+    .delorderinfo span {
+        display: block;
+        margin-bottom: 3px;
+    }
+}
